<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SummaryFragment">

    <data>
        <variable
            name="summaryFragment"
            type="ay.artemis.myapplication.fragments.SummaryFragment" />

        <variable
            name="viewModel"
            type="ay.artemis.myapplication.models.TipViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="377dp"
                android:layout_height="292dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline8"
                app:layout_constraintVertical_bias="0.22">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tip_data_label"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/tip_amount_label"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tip_data"
                        android:layout_width="172dp"
                        android:layout_height="52dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="5dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="5dp"
                        android:text="@string/tip_data_displayed"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        tools:text="25%" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/bill_amount_label"
                        android:layout_width="202dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/bill_amount_label"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/bill_data"
                        android:layout_width="172dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="10dp"
                        android:text="@string/bill_amount_data"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        tools:text="$100.00" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/numb_of_ppl_label"
                        android:layout_width="202dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/number_of_people_label"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/numb_of_ppl_data"
                        android:layout_width="172dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="10dp"
                        android:text="@string/number_of_ppl_data"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        tools:text="5" />
                </TableRow>


            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/guideline17"
                app:layout_constraintVertical_bias="0.085" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:text="@string/grand_total"
                android:textAlignment="textEnd"
                tools:text="Grand Total: $99.89"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline17"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="344dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="395dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="219dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="399dp" />

            <TextView
                android:id="@+id/result_header"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="10dp"
                android:text="@string/result_header"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>