<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    tools:context=".fragments.TipFragment">

    <data>
        <import type="android.view.View" />
        <variable
            name="tipFragment"
            type="ay.artemis.myapplication.fragments.TipFragment" />

        <variable
            name="viewModel"
            type="ay.artemis.myapplication.models.TipViewModel" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tip_header"
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="@string/calculate_the_tip_header"
                android:textAlignment="center"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline9"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="98dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toTopOf="@+id/guideline9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_base_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_a_bill_amount"
                    android:inputType="numberDecimal"
                    android:onTextChanged="@{(CharSequence, start, before, cost) -> viewModel.subTotalCalculated(cost)}"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout> <!--(cost) -> viewModel.subTotalCalculated(cost)--><!--() -> viewModel.subTotalEditTextDisplay()-->

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="201dp" />

            <SeekBar
                android:id="@+id/tip_seek_bar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:paddingStart="25dp"
                android:paddingEnd="16dp"
                android:progress="@{viewModel.onEditTextTyped()}"
                android:onProgressChanged="@{(tip_seek_bar, progress, fromUser) -> viewModel.progressValues(progress)}"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toTopOf="@+id/guideline11"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tip_seek_bar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tip_seek_bar"
                app:layout_constraintTop_toTopOf="@+id/guideline10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_no_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/how_many_people"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/calc_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:text="@string/calculate_txt"
                android:onClick="@{() -> tipFragment.allCalculated()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="150dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="391dp" />

            <TextView
                android:id="@+id/tip_percentage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:text="@={viewModel.percentProgressLiveData}"
                tools:text="Tip Percentage: 24%"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <TextView
                android:id="@+id/sub_total"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:text="@={() -> viewModel.subTotalEditTextDisplay()}"
                tools:text="Sub Total: $89.89"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toTopOf="@+id/guideline16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="176dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="382dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="-4dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="332dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>